// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render expense total 1 item correctly 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totaling 
    $0.00
     
  </h1>
</div>
`;

exports[`should render expense total multiple items correctly 1`] = `
<div>
  <h1>
    Viewing 
    3
     
    expenses
     totaling 
    $0.00
     
  </h1>
</div>
`;
